try to stop awkward wrapping

--- a/location-attributes-admin.css
+++ b/location-attributes-admin.css
@@ -1,2 +1,3 @@
 #taxonomy-location-attributes .attribute-dropdown-button { float: right; }
 #taxonomy-location-attributes .attribute-dropdown li { text-align: right; }
+#taxonomy-location-attributes label { display: inline-block; max-width: 170px }
